@@ -15,7 +15,6 @@
  * along with Jeedom. If not, see <http://www.gnu.org/licenses/>.
  */
 
-
  editor = [];
 
  listColor = ['#16a085', '#27ae60', '#2980b9', '#745cb0', '#f39c12', '#d35400', '#c0392b', '#2c3e50', '#7f8c8d'];
@@ -273,7 +272,7 @@ $('#bt_displayScenarioVariable').on('click', function () {
 });
 
 /*******************Element***********************/
-$('body').delegate('.bt_addScenarioElement', 'click', function (event) {
+$('body').delegate( '.bt_addScenarioElement','click', function (event) {
     var elementDiv = $(this).closest('.element');
     var expression = false;
     if ($(this).hasClass('fromSubElement')) {
